--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
   },
   "dependencies": {
     "expo": "^25.0.0",
+    "install": "^0.10.4",
+    "npm": "^5.6.0",
     "react": "16.2.0",
-    "react-native": "0.52.0"
+    "react-native": "^0.52.0",
+    "react-native-fetch": "^1.0.0",
+    "react-native-navigation": "^1.1.377",
+    "react-navigation": "^1.0.3"
   }
 }
