--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "auth0-js": "^8.12.0",
     "expo": "^25.0.0",
     "install": "^0.10.4",
     "npm": "^4.2.0",
-    "react": "16.2.0",
+    "react": "^16.2.0",
     "react-native": "^0.52.0",
     "react-native-fetch": "^1.0.0",
+    "react-native-maps": "^0.19.0",
     "react-native-navigation": "^1.1.377",
     "react-navigation": "^1.0.3"
   }
