--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-fetch": "^1.0.0",
     "react-native-maps": "^0.19.0",
     "react-native-navigation": "^1.1.377",
+    "react-native-scripts": "^1.11.1",
     "react-navigation": "^1.0.3"
   }
 }
