--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "^0.52.0",
     "react-native-fetch": "^1.0.0",
     "react-native-navigation": "^1.1.377",
+    "react-native-pull-to-refresh": "^2.1.3",
     "react-navigation": "^1.0.3"
   }
 }
