--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "react-native-scripts": "1.11.1",
     "jest-expo": "25.0.0",
     "react-test-renderer": "16.2.0"
   },
@@ -20,13 +21,11 @@
   "dependencies": {
     "expo": "^25.0.0",
     "install": "^0.10.4",
-    "npm": "^4.2.0",
-    "react": "^16.0.0",
-    "react-native": "^0.51.0",
+    "npm": "^4.6.1",
+    "react": "16.2.0",
+    "react-native": "0.52.0",
     "react-native-fetch": "^1.0.0",
-    "react-native-maps": "^0.19.0",
-    "react-native-navigation": "^1.1.377",
-    "react-native-scripts": "^1.11.1",
-    "react-navigation": "^1.0.3"
+    "react-native-navigation": "^1.1.384",
+    "react-navigation": "^1.1.2"
   }
 }
