--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-fetch": "^1.0.0",
+    "react-native-modal-datetime-picker": "^4.13.0",
     "react-native-navigation": "^1.1.384",
     "react-navigation": "^1.1.2"
   }
