circleCIのyarnへの移行とテストコマンドの上書き

--- a/circle.yml
+++ b/circle.yml
@@ -2,8 +2,10 @@ machine:
   node:
     version: 6.9
 dependencies:
+  override:
+    - yarn
   pre:
-    - npm install -g exp@48.0.4
+    - yarn global add exp@48.0.4
   test:
     override:
       - echo "no tests"
@@ -11,4 +13,4 @@ deployment:
   appr:
     branch: /.*/
     commands:
-      - 'if [ "$CI_PULL_REQUEST" != "" ]; then npm run appr; fi'
+      - 'if [ "$CI_PULL_REQUEST" != "" ]; then yarn appr; fi'
