--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.11.1",
     "appr": "^1.1.1",
     "jest-expo": "25.0.0",
+    "react-native-scripts": "1.11.1",
     "react-test-renderer": "16.2.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -26,10 +26,11 @@
     "npm": "^4.6.1",
     "react": "16.2.0",
     "react-native": "0.52.0",
+    "react-native-elements": "1.0.0-beta2",
     "react-native-fetch": "^1.0.0",
-    "react-native-pull-to-refresh": "^2.1.3",
     "react-native-modal-datetime-picker": "^4.13.0",
     "react-native-navigation": "^1.1.384",
+    "react-native-pull-to-refresh": "^2.1.3",
     "react-navigation": "^1.1.2"
   }
 }
