--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "npm": "^4.6.1",
     "react": "16.2.0",
     "react-native": "0.52.0",
+    "react-native-elements": "^1.0.0-beta2",
     "react-native-fetch": "^1.0.0",
-    "react-native-pull-to-refresh": "^2.1.3",
     "react-native-modal-datetime-picker": "^4.13.0",
     "react-native-navigation": "^1.1.384",
+    "react-native-pull-to-refresh": "^2.1.3",
     "react-navigation": "^1.1.2"
   }
 }
