--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.11.1",
     "appr": "^1.1.1",
+    "flow-bin": "^0.66.0",
     "jest-expo": "25.0.0",
+    "react-native-scripts": "1.11.1",
     "react-test-renderer": "16.2.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -15,7 +16,7 @@
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
     "test": "echo no tests",
-    "appr": "appr"
+    "appr": "appr",
   },
   "jest": {
     "preset": "jest-expo"
@@ -27,9 +28,9 @@
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-fetch": "^1.0.0",
-    "react-native-pull-to-refresh": "^2.1.3",
     "react-native-modal-datetime-picker": "^4.13.0",
     "react-native-navigation": "^1.1.384",
+    "react-native-pull-to-refresh": "^2.1.3",
     "react-navigation": "^1.1.2"
   }
 }
