--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "expo": "^25.0.0",
     "install": "^0.10.4",
     "npm": "^4.6.1",
-    "react": "16.2.0",
-    "react-native": "0.52.0",
     "react-native-elements": "^1.0.0-beta2",
+    "react": "^16.2.0",
+    "react-native": "^0.52.0",
     "react-native-fetch": "^1.0.0",
     "react-native-modal-datetime-picker": "^4.13.0",
     "react-native-navigation": "^1.1.384",
