--- a/app.json
+++ b/app.json
@@ -1,5 +1,9 @@
 {
   "expo": {
-    "sdkVersion": "25.0.0"
+    "sdkVersion": "25.0.0",
+    "splash":{
+      "image": "./SAP_icon.png",
+      "backgroundColor": "#FEF9B0"
+    }
   }
 }
