--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "sdkVersion": "25.0.0",
     "splash":{
-      "image": "./SAP_icon.png",
+      "image": "./assets/SAP_icon.png",
       "backgroundColor": "#FEF9B0"
     }
   }
