--- a/circle.yml
+++ b/circle.yml
@@ -6,6 +6,7 @@ dependencies:
     - yarn
   pre:
     - yarn global add exp@48.0.4
+    - echo 'API_ENDPOINT=test' > .env
   test:
     override:
       - echo "no tests"
