--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "devDependencies": {
     "appr": "^1.1.1",
+    "babel-eslint": "^8.2.2",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
     "flow-bin": "^0.67.1",
     "jest-expo": "25.0.0",
-    "react-native-dotenv": "^0.1.1",
     "react-native-scripts": "1.11.1",
     "react-test-renderer": "16.2.0"
   },
@@ -23,6 +27,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "eslint": "^4.19.1",
     "expo": "^25.0.0",
     "install": "^0.10.4",
     "npm": "^4.6.1",
@@ -33,6 +38,7 @@
     "react-native-modal-datetime-picker": "^4.13.0",
     "react-native-navigation": "^1.1.384",
     "react-native-pull-to-refresh": "^2.1.3",
-    "react-navigation": "^1.1.2"
+    "react-navigation": "^1.1.2",
+    "react-native-dotenv": "^0.1.1",
   }
 }
