Network.jsでのfetch後の処理を修正

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,10 @@
   "parserOptions": {
     "sourceType": "module"
   },
+  "globals": {
+    "fetch": false,
+    "require": false
+  },
   "rules": {
     "indent": [
       "error",
