--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
     "react-native-navigation": "^1.1.384",
     "react-native-pull-to-refresh": "^2.1.3",
     "react-navigation": "^1.1.2",
-    "react-native-dotenv": "^0.1.1",
+    "react-native-dotenv": "^0.1.1"
   }
 }
