--- a/package.json
+++ b/package.json
@@ -27,18 +27,20 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/vector-icons": "^6.3.1",
     "eslint": "^4.19.1",
     "expo": "^25.0.0",
     "install": "^0.10.4",
     "npm": "^4.6.1",
+    "prop-types": "^15.6.2",
     "react": "^16.2.0",
     "react-native": "^0.52.0",
+    "react-native-dotenv": "^0.1.1",
     "react-native-elements": "^1.0.0-beta3",
     "react-native-fetch": "^1.0.0",
     "react-native-modal-datetime-picker": "^4.13.0",
     "react-native-navigation": "^1.1.384",
     "react-native-pull-to-refresh": "^2.1.3",
-    "react-navigation": "^1.1.2",
-    "react-native-dotenv": "^0.1.1"
+    "react-navigation": "^1.1.2"
   }
 }
