--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,10 @@
   "rules": {
     "indent": [
       "error",
-      2
+      2,
+      {
+        "SwitchCase": 1
+      }
     ],
     "react/jsx-filename-extension": [
       1,
