--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-navigation": "^1.1.384",
     "react-native-pull-to-refresh": "^2.1.3",
     "react-navigation": "^1.1.2",
-    "react-redux": "^5.0.7"
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   }
 }
