--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "@types/prop-types": "^15.5.3",
     "appr": "^1.1.1",
     "babel-eslint": "^8.2.2",
     "eslint-config-airbnb": "^16.1.0",
@@ -31,6 +32,7 @@
     "expo": "^25.0.0",
     "install": "^0.10.4",
     "npm": "^4.6.1",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-native": "^0.52.0",
     "react-native-dotenv": "^0.1.1",
@@ -41,6 +43,7 @@
     "react-native-pull-to-refresh": "^2.1.3",
     "react-navigation": "^1.1.2",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   }
 }
