--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,8 @@
   },
   "globals": {
     "fetch": false,
-    "require": false
+    "require": false,
+    "__DEV__": false
   },
   "rules": {
     "indent": [
