--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint-plugin-react": "^7.7.0",
     "flow-bin": "^0.67.1",
     "jest-expo": "25.0.0",
+    "react-native-debugger-open": "^0.3.17",
     "react-native-scripts": "1.11.1",
     "react-test-renderer": "16.2.0"
   },
@@ -44,6 +45,7 @@
     "react-navigation": "^1.1.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   }
 }
