--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-eslint": "^8.2.2",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jest": "^21.17.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "flow-bin": "^0.67.1",
@@ -22,18 +23,25 @@
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
-    "test": "echo no tests",
+    "test": "jest",
+    "test:watch": "npm test -- --watch",
     "appr": "appr",
     "debugger": "open 'rndebugger://set-debugger-loc?host=localhost&port=19001'"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "automock": false,
+    "setupFiles": [
+      "./src/setupTests.js"
+    ]
   },
   "dependencies": {
     "@expo/vector-icons": "^6.3.1",
+    "@types/jest": "^23.1.4",
     "eslint": "^4.19.1",
     "expo": "^25.0.0",
     "install": "^0.10.4",
+    "jest-fetch-mock": "^1.6.5",
     "npm": "^4.6.1",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
@@ -48,6 +56,7 @@
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0"
   }
 }
