--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint-plugin-react": "^7.7.0",
     "flow-bin": "^0.67.1",
     "jest-expo": "25.0.0",
+    "react-dom": "^16.4.1",
     "react-native-debugger-open": "^0.3.17",
     "react-native-scripts": "1.11.1",
     "react-test-renderer": "16.2.0"
@@ -57,6 +58,8 @@
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.3",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1"
   }
 }
