--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "jest-expo": "25.0.0",
     "react-dom": "^16.4.1",
     "react-native-debugger-open": "^0.3.17",
-    "react-native-scripts": "1.11.1",
-    "react-test-renderer": "16.2.0"
+    "react-native-scripts": "1.11.1"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -34,17 +33,25 @@
     "automock": false,
     "setupFiles": [
       "./src/setupTests.js"
-    ]
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$":
+      "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+    }
   },
   "dependencies": {
     "@expo/vector-icons": "^6.3.1",
     "@types/jest": "^23.1.4",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
     "expo": "^25.0.0",
     "install": "^0.10.4",
     "jest-fetch-mock": "^1.6.5",
     "npm": "^4.6.1",
     "prop-types": "^15.6.2",
+    "react-test-renderer": "16.2.0",
     "react": "^16.4.1",
     "react-native": "^0.52.0",
     "react-native-dotenv": "^0.1.1",
@@ -58,8 +65,6 @@
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.3",
-    "redux-thunk": "^2.3.0",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1"
+    "redux-thunk": "^2.3.0"
   }
 }
