--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,18 +6,23 @@ jobs:
       - image: circleci/node:latest-browsers
     steps:
       - checkout
+
       - run:
           name: Generate .env file
           command: echo 'API_ENDPOINT='$API_ENDPOINT_STAGING > .env
+
       - restore_cache:
-          key: v1-node_modules
+          key: yarn-v1-{{ checksum "package.json" }}
+
       - run:
           name: Install npm packages
           command: yarn
+
       - save_cache:
-          key: v1-node_modules
+          key: yarn-v1-{{ checksum "package.json" }}
           paths:
           - node_modules
+
       - run:
           name: Run tests
-          command: yarn test
+         command: yarn run test
