--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "devDependencies": {
     "@types/prop-types": "^15.5.3",
-    "appr": "^1.1.1",
     "babel-eslint": "^8.2.2",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
@@ -25,7 +24,6 @@
     "ios": "react-native-scripts ios",
     "test": "jest",
     "test:watch": "npm test -- --watch",
-    "appr": "appr",
     "postinstall": "rndebugger-open",
     "debugger": "open 'rndebugger://set-debugger-loc?host=localhost&port=19001'"
   },
@@ -54,7 +52,7 @@
     "prop-types": "^15.6.2",
     "react-test-renderer": "16.2.0",
     "react": "^16.4.1",
-    "react-native": "^0.52.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
     "react-native-dotenv": "^0.1.1",
     "react-native-elements": "^1.0.0-beta3",
     "react-native-fetch": "^1.0.0",
