--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
       "./src/setupTests.js"
     ],
     "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$":
-      "<rootDir>/__mocks__/fileMock.js",
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
     }
   },
@@ -50,17 +49,17 @@
     "jest-fetch-mock": "^1.6.5",
     "npm": "^4.6.1",
     "prop-types": "^15.6.2",
-    "react-test-renderer": "16.2.0",
-    "react": "^16.4.1",
+    "react": "^16.2.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
     "react-native-dotenv": "^0.1.1",
-    "react-native-elements": "^1.0.0-beta3",
+    "react-native-elements": "^1.0.0-beta5",
     "react-native-fetch": "^1.0.0",
     "react-native-modal-datetime-picker": "^4.13.0",
     "react-native-navigation": "^1.1.384",
     "react-native-pull-to-refresh": "^2.1.3",
     "react-navigation": "^1.1.2",
     "react-redux": "^5.0.7",
+    "react-test-renderer": "16.2.0",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.3",
