--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
-    "test": "jest",
+    "test": "echo \"no jest\"",
     "test:watch": "npm test -- --watch",
     "postinstall": "rndebugger-open",
     "debugger": "open 'rndebugger://set-debugger-loc?host=localhost&port=19001'"
