--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,7 @@
 {
-  "presets": ["babel-preset-expo", "react-native-dotenv"],
+  "presets": [
+    "babel-preset-expo"
+  ],
   "env": {
     "development": {
       "plugins": ["transform-react-jsx-source"]
