--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
   "expo": {
     "name": "Book Seeker",
-    "description": "Manage books for Smartphone Apps Project. https://github.com/SmartPhoneAppsProject/BookSeeker",
+    "description": "Manage books for SmartPhone Apps Project. https://github.com/SmartPhoneAppsProject/BookSeeker",
     "slug": "book-seeker",
     "version": "1.0.0",
-    "sdkVersion": "25.0.0",
+    "sdkVersion": "31.0.0",
     "githubUrl": "https://github.com/SmartPhoneAppsProject/BookSeeker",
     "icon": "./assets/icon.png",
     "splash": {
