--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "devDependencies": {
     "@types/prop-types": "^15.5.3",
     "babel-eslint": "^8.2.2",
+    "babel-preset-expo": "^5.0.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jest": "^21.17.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "flow-bin": "^0.67.1",
-    "jest-expo": "25.0.0",
+    "jest-expo": "^31.0.0",
     "react-dom": "^16.4.1",
     "react-native-debugger-open": "^0.3.17",
-    "react-native-scripts": "1.11.1"
+    "react-native-scripts": "^2.0.1"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -40,19 +41,21 @@
     }
   },
   "dependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
     "@expo/vector-icons": "^6.3.1",
     "@types/jest": "^23.1.4",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
-    "expo": "^25.0.0",
+    "expo": "^31.0.4",
     "install": "^0.10.4",
     "jest-fetch-mock": "^1.6.5",
-    "npm": "^4.6.1",
+    "npm": "^6.7.0",
     "prop-types": "^15.6.2",
-    "react": "^16.2.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
-    "react-native-dotenv": "^0.1.1",
+    "react": "16.5.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-elements": "^1.0.0-beta5",
     "react-native-fetch": "^1.0.0",
     "react-native-modal-datetime-picker": "^4.13.0",
