--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,11 @@
 {
   "presets": [
-    "babel-preset-expo"
+    "babel-preset-expo",
+    "module:react-native-dotenv"
   ],
   "env": {
     "development": {
-      "plugins": ["transform-react-jsx-source"]
+      "plugins": ["@babel/plugin-transform-react-jsx-source"]
     }
   }
 }
