--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "@babel/plugin-transform-react-jsx-source": "^7.2.0",
     "@types/prop-types": "^15.5.3",
     "babel-eslint": "^8.2.2",
     "babel-preset-expo": "^5.0.0",
@@ -14,10 +15,9 @@
     "flow-bin": "^0.67.1",
     "jest-expo": "^31.0.0",
     "react-dom": "^16.4.1",
-    "react-native-debugger-open": "^0.3.17",
     "react-native-scripts": "^2.0.1"
   },
-  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
+  "main": "./node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "eject": "expo eject",
@@ -25,9 +25,7 @@
     "ios": "expo ios",
     "test": "echo no tests",
     "appr": "appr",
-    "test:watch": "npm test -- --watch",
-    "postinstall": "rndebugger-open",
-    "debugger": "open 'rndebugger://set-debugger-loc?host=localhost&port=19001'"
+    "test:watch": "npm test -- --watch"
   },
   "jest": {
     "preset": "jest-expo",
@@ -62,11 +60,12 @@
     "react-native-navigation": "^1.1.384",
     "react-native-pull-to-refresh": "^2.1.3",
     "react-navigation": "^1.1.2",
-    "react-redux": "^5.0.7",
+    "react-redux": "^5.1.1",
     "react-test-renderer": "16.2.0",
-    "redux": "^4.0.0",
+    "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.3",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "react-native-dotenv": "^0.2.0"
   }
 }
