--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "flow-bin": "^0.67.1",
-    "jest-expo": "^32.0.0",
+    "jest-expo": "^33.0.0",
     "react-dom": "^16.4.1",
     "react-native-scripts": "^2.0.1"
   },
-  "main": "./node_modules/expo/AppEntry.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "eject": "expo eject",
-    "android": "expo android",
-    "ios": "expo ios",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "test": "echo no tests",
     "appr": "appr",
     "test:watch": "npm test -- --watch"
@@ -47,13 +47,13 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
-    "expo": "^32.0.0",
+    "expo": "^33.0.0",
     "install": "^0.10.4",
     "jest-fetch-mock": "^1.6.5",
     "npm": "^6.7.0",
     "prop-types": "^15.6.2",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react": "16.8.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-elements": "^1.0.0-beta5",
     "react-native-fetch": "^1.0.0",
     "react-native-modal-datetime-picker": "^4.13.0",
