--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "@babel/plugin-transform-react-jsx-source": "^7.2.0",
     "@types/prop-types": "^15.5.3",
     "babel-eslint": "^8.2.2",
-    "babel-preset-expo": "^5.0.0",
+    "babel-preset-expo": "^6.0.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jest": "^21.17.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "flow-bin": "^0.67.1",
-    "jest-expo": "^33.0.0",
-    "react-dom": "^16.4.1",
+    "jest-expo": "^34.0.0",
+    "react-dom": "16.8.3",
     "react-native-scripts": "^2.0.1"
   },
   "main": "node_modules/expo/AppEntry.js",
@@ -42,18 +42,18 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "@expo/vector-icons": "^6.3.1",
+    "@expo/vector-icons": "^10.0.0",
     "@types/jest": "^23.1.4",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
-    "expo": "^33.0.0",
+    "expo": "^34.0.0",
     "install": "^0.10.4",
     "jest-fetch-mock": "^1.6.5",
     "npm": "^6.7.0",
     "prop-types": "^15.6.2",
     "react": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.2.tar.gz",
     "react-native-elements": "^1.0.0-beta5",
     "react-native-fetch": "^1.0.0",
     "react-native-modal-datetime-picker": "^4.13.0",
@@ -66,6 +66,9 @@
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
-    "react-native-dotenv": "^0.2.0"
+    "react-native-dotenv": "^0.2.0",
+    "expo-barcode-scanner": "~6.0.0",
+    "expo-image-picker": "~6.0.0",
+    "expo-permissions": "~6.0.0"
   }
 }
